@@ -1,7 +1,6 @@
 package ru.clevertec.check.runner.services.impl;
 
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import ru.clevertec.check.runner.model.dto.ProductDto;
@@ -12,32 +11,29 @@ import ru.clevertec.check.runner.repository.ProductRepository;
 import ru.clevertec.check.runner.services.ProductService;
 import ru.clevertec.check.runner.services.ProductServiceForUI;
 import ru.clevertec.check.runner.util.exception.ObjectNotFoundException;
-import ru.clevertec.check.runner.util.mapstruct.SimpleSourceDestinationMapper;
+import ru.clevertec.check.runner.util.mapperMapstruct.ProductMapper;
 import ru.clevertec.check.runner.util.validation.DoubleFormatting;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service("productServiceImpl")
 @RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService, ProductServiceForUI {
 
     private final ProductRepository productRepository;
-    private final ModelMapper modelMapper;
-    private final SimpleSourceDestinationMapper mapper;
+    private final ProductMapper mapper;
 
     @Override
     public ProductDtoForSave findByProductDtoId(Long id) throws ObjectNotFoundException {
-       // return modelMapper.map(findByProductDtoId(id), ProductDtoForSave.class);
-        return mapper.sourceToProductDtoForSave(findById(id));
+        return mapper.entityToDtoForSave(findById(id));
     }
 
 
     @Override
     public ProductDto saveProduct(ProductDtoForSave product) {
-        return modelMapper
-                .map(productRepository.save(
-                        modelMapper.map(product, Product.class)), ProductDto.class);
+        return mapper
+                .entityToDto(
+                        productRepository.save(mapper.dtoToEntity(product)));
     }
 
     @Override
@@ -47,7 +43,9 @@ public class ProductServiceImpl implements ProductService, ProductServiceForUI {
 
     @Override
     public ProductDtoForSave updateDto(ProductDtoForSave product) {
-        return modelMapper.map(productRepository.save(modelMapper.map(product, Product.class)), ProductDtoForSave.class);
+        return mapper
+                .entityToDtoForSave(
+                        productRepository.save(mapper.dtoToEntity(product)));
 
     }
 
@@ -66,10 +64,9 @@ public class ProductServiceImpl implements ProductService, ProductServiceForUI {
 
     @Override
     public List<ProductDtoForSave> allListProductDto(int offset, int limit) {
-        return productRepository.findAll(PageRequest.of(offset, limit))
-                .stream()
-                .map(product -> modelMapper.map(product, ProductDtoForSave.class))
-                 .collect(Collectors.toList());
+        return mapper
+                .listEntityToListDto(
+                        productRepository.findAll(PageRequest.of(offset, limit)).toList());
     }
 
 
